--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Friend & Chicken </title>
-    <link rel="stylesheet" href="chickenweb.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -143,7 +143,7 @@
         </div>
     </div>
 
-<script src="chickenweb.js"></script>
+<script src="app.js"></script>
 
 </body>
 </html>
